修改报错